refactor(.env.example): add Sticker.ly API configuration variables
- Add STICKERLY_API_BASE_URL variable
- Add STICKERLY_USER_AGENT variable

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ NUXT_UI_PRO_LICENSE=
 
 # Public URL, used for OG Image when running nuxt generate
 NUXT_PUBLIC_SITE_URL=
+
+# Sticker.ly API configuration
+STICKERLY_API_BASE_URL=
+STICKERLY_USER_AGENT=
