--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ NUXT_PUBLIC_SITE_URL=
 # Sticker.ly API configuration
 STICKERLY_API_BASE_URL=
 STICKERLY_USER_AGENT=
+
+# Database connection string
+DATABASE_URL=
