--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "better-sqlite3": "^11.10.0",
     "nuxt": "^3.17.5",
     "nuxt-llms": "0.1.3",
-    "nuxt-og-image": "^5.1.7"
+    "nuxt-og-image": "^5.1.7",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.4.1",
