chore(package): add engines field for Node version
- Specify Node version as 22 in engines field

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/sergiooak/sticker-ly-api-wrapper/issues"
   },
   "homepage": "https://sticker-ly-api-wrapper.com",
+  "engines": { "node": "22" },
   "keywords": [
     "nuxt",
     "documentation",
